package ca.mcmaster.cas.se2aa4.a2.island.Features.Soil;

import ca.mcmaster.cas.se2aa4.a2.island.Containers.Island;

public interface SoilProfile {
    void process(Island container);
}
