package ca.mcmaster.cas.se2aa4.a2.island.UI;

import ca.mcmaster.cas.se2aa4.a2.island.Containers.Island;

public class AltitudeFactory implements FeatureRunner{
    @Override
    public void process(Island island, Configuration config) {

    }
}
